# football-statistics

./: README.md  setup.cfg  tox.ini
core/: models.py  serializers.py  urls.py  views.py
core/management/commands/: exportlaliga.py
core/migrations/: 0001_initial.py  0002_auto_20200308_1216.py  0005_remove_game_journey.py
frontend/: package.json
frontend/src/components/: App.js  Calendar.js  DateComparator.js  DateStatistics.js
frontend/static/frontend/: main.js
frontend/templates/frontend/: index.html
la_liga/: .gitignore  LICENSE  manage.py  setup.py  urls.py  wsgi.py
la_liga/.github/workflows/: main.yml
la_liga/core/: serializers.py  urls.py  views.py
la_liga/core/migrations/: 0003_auto_20200308_1245.py  0004_game_journey.py
la_liga/frontend/: webpack.config.js
la_liga/frontend/src/components/: App.js  DateComparator.js  DateStatistics.js  TeamComparator.js  TeamStatistics.js
la_liga/frontend/static/frontend/: main.js
la_liga/la_liga/: asgi.py
la_liga/la_liga/settings/: base.py  production.py
la_liga/settings/: base.py
la_liga/tests/: requirements.txt  test_foo.py
tests/: conftest.py
