[metadata]
name = la_liga
author = 'Aaron Diez'
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Intended Audience :: Developers
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8

[files]
packages =
    la_liga
